--- a/MORT/app.config
+++ b/MORT/app.config
@@ -121,6 +121,9 @@ Monkeyhead's OCR Realtime TransLate {0}
       <setting name="UI_OCR_EXCEPTION_AREA_TITLE" serializeAs="String">
         <value>제외 영역</value>
       </setting>
+      <setting name="FAIL_HOTKEY_OPEN_SETTING_FILE" serializeAs="String">
+        <value>단축키 실패! - 설정 파일이 없습니다 - {0}</value>
+      </setting>
     </MORT.Properties.Settings>
   </applicationSettings>
 </configuration>
