--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -163,6 +163,7 @@
     <Compile Include="AlphaDialog\AlphaColorPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ClipboardAssist\ClipboardMonitor.cs" />
     <Compile Include="Color Picker\BinaryColorPickerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -213,6 +214,9 @@
       <DependentUpon>DonatePage.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1Button.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormClipboardAssist.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormOption.cs">
@@ -610,7 +614,10 @@
       <Version>2.2.29</Version>
     </PackageReference>
     <PackageReference Include="RestSharp">
-      <Version>106.11.7</Version>
+      <Version>106.12.0</Version>
+    </PackageReference>
+    <PackageReference Include="SharpClipboard">
+      <Version>3.5.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
