고급 설정 - 어두운 창 폰트 설정

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -297,6 +297,7 @@
       <DependentUpon>SettingBrowserUI.cs</DependentUpon>
     </Compile>
     <Compile Include="SettingData\BaseSettingData.cs" />
+    <Compile Include="SettingData\SerializableFont.cs" />
     <Compile Include="TabControl.cs">
       <SubType>Component</SubType>
     </Compile>
