--- a/GSTrans/packages.config
+++ b/GSTrans/packages.config
@@ -1,9 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Api.CommonProtos" version="2.3.0" targetFramework="net472" />
+  <package id="Google.Api.Gax" version="3.5.0" targetFramework="net472" />
+  <package id="Google.Api.Gax.Grpc" version="3.5.0" targetFramework="net472" />
+  <package id="Google.Api.Gax.Grpc.GrpcCore" version="3.5.0" targetFramework="net472" />
   <package id="Google.Apis" version="1.57.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.57.0" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.57.0" targetFramework="net472" />
   <package id="Google.Apis.Sheets.v4" version="1.57.0.2637" targetFramework="net472" />
+  <package id="Google.Cloud.Vision.V1" version="2.4.0" targetFramework="net472" />
+  <package id="Google.LongRunning" version="2.3.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.15.8" targetFramework="net472" />
+  <package id="Grpc.Auth" version="2.38.0" targetFramework="net472" />
+  <package id="Grpc.Core" version="2.38.1" targetFramework="net472" />
+  <package id="Grpc.Core.Api" version="2.38.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="Zlib.Portable.Signed" version="1.11.0" targetFramework="net452" />
 </packages>
