단축키로 번역기 변경시 상태값 추가 버전 업데이트

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -270,6 +270,7 @@
     <Compile Include="KeyInputLabel.Designer.cs">
       <DependentUpon>KeyInputLabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="LocalizeManager\LocalizeManager.cs" />
     <Compile Include="Manager\OCRDataManager.cs" />
     <Compile Include="Manager\OcrManager.cs" />
     <Compile Include="Manager\TransManager.cs" />
