1. 기본 번역기 - 고품질 / 저품질 상태 알림 2. 번역 - 고급 설정 탭

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -274,6 +274,7 @@
     <Compile Include="KeyInputLabel.Designer.cs">
       <DependentUpon>KeyInputLabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="LocalizeManager\ILocalizeForm.cs" />
     <Compile Include="LocalizeManager\LocalizeManager.cs" />
     <Compile Include="Manager\OCRDataManager.cs" />
     <Compile Include="Manager\OcrManager.cs" />
