딥플 번역기 타임아웃 개선 상태 확인하기 추가

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -487,6 +487,9 @@
     <EmbeddedResource Include="TabControl.resx">
       <DependentUpon>TabControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="TransAPI\DeeplWebView.resx">
+      <DependentUpon>DeeplWebView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="transForm.resx">
       <DependentUpon>TransForm.cs</DependentUpon>
       <SubType>Designer</SubType>
