--- a/ScreenCapture/ScreenCapture.csproj
+++ b/ScreenCapture/ScreenCapture.csproj
@@ -1,15 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿
+<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
-    <UseWindowsForms>true</UseWindowsForms>
-    <Platforms>x64</Platforms>
-  </PropertyGroup>
+<PropertyGroup>
+  <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+  <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
+  <Nullable>enable</Nullable>
+  <UseWPF>true</UseWPF>
+  <Platforms>x64</Platforms>
+  <EnableDefaultApplicationDefinition>false</EnableDefaultApplicationDefinition>
+</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="SharpDX.Direct3D11">
-      <Version>4.2.0</Version>
-    </PackageReference>
-  </ItemGroup>
+<ItemGroup>
+  <PackageReference Include="SharpDX.Direct3D11">
+    <Version>4.2.0</Version>
+  </PackageReference>
+  <PackageReference Include="System.Runtime.InteropServices.WindowsRuntime">
+    <Version>4.3.0</Version>
+  </PackageReference>
+</ItemGroup>
+
 </Project>
