웹뷰 설정 변경

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup Label="Globals">
     <WebView2UseWinRT>False</WebView2UseWinRT>
+    <WebView2LoaderPreference>Dynamic</WebView2LoaderPreference>
   </PropertyGroup>
 
   <PropertyGroup>
