패키지 업데이트, r3 패키지 추가 오버레이 번역창 바로 사용할 수 있도록 수정

--- a/MORT/app.config
+++ b/MORT/app.config
@@ -73,7 +73,7 @@
   <applicationSettings>
     <MORT.Properties.Settings>
       <setting name="MORT_VERSION" serializeAs="String">
-        <value>1.307V</value>
+        <value>1.307V - test</value>
       </setting>
       <setting name="LAYER_TEXT" serializeAs="String">
         <value>MORT {0}
