--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -43,10 +43,14 @@
     <PackageReference Include="Google.GenAI" Version="0.3.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2045.28" />
     <PackageReference Include="Python.Included" Version="3.11.6" />
+    <PackageReference Include="R3" Version="1.3.0" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
     <PackageReference Include="SharpClipboard" Version="3.5.2" />
     <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Net.Security" Version="4.3.1" />
     <PackageReference Include="System.Runtime.InteropServices.WindowsRuntime" Version="4.3.0" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageReference Include="System.Windows.Extensions" Version="7.0.0" />
   </ItemGroup>
 
