--- a/MORT/Properties/Settings.settings
+++ b/MORT/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="MORT_VERSION" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">1.307V</Value>
+      <Value Profile="(Default)">1.307V - test</Value>
     </Setting>
     <Setting Name="LAYER_TEXT" Type="System.String" Scope="Application">
       <Value Profile="(Default)">MORT {0}
